# reader

./: .gitignore  README.md  build_graph.py  pyproject.toml
backend/: pyproject.toml
backend/downloading/: extract.py  main.py
experiments/: tsne-visualizations.ipynb  umap-visualizations.ipynb
extension-old/: pnpm-lock.yaml
frontend/: graphData.json  index.html  index.js  main.ts  package-lock.json
frontend/extension-old/: package.json
pipeline/: .gitignore  HOW_TO.md  build_graph.py  claude.py  embedding.py  main.py  utils.py
